# ALLVIA

./: .gitattributes  .gitignore  .release-allowlist.example  PROJECT_BIBLE.md  PROJECT_COMPREHENSIVE_GUIDE_PART5.md  Q&A 최종.html  README.md  STEER_OS_EVALUATION_QA_MASTER (1).md  STEER_OS_EVALUATION_QA_MASTER.md  STEER_OS_TECH_ARCH_DECISION_PLAYBOOK.md  STEER_OS_TECH_PITCH_DECK_SCRIPT.md  STEER_OS_TECH_STACK_DECISION_STUDY_V2.md  allvia 발표자료.md  allvia_presentation.html  build_html.py  build_html_v2.py  build_html_v3.py  build_html_v4.py  docker-compose.yml  replace_qa.py  requirements-collector.txt  run_all_scenarios.sh  run_complex_scenarios.sh  run_gui_regression_pack.sh  run_nl_request_with_telegram.sh  run_priority_regression.sh  run_profile_matrix_regression.sh  run_scenario_3_test.sh  run_scenario_4_test.sh  run_scenario_5_only.sh  send_telegram_notification.sh  telegram_rewriter.py  질의응답 v0.2.docx
core/: .env.example  Cargo.toml
core/mock/: workflow_received_mock.json
core/src/: action_schema.rs  ai_digest.rs  analyzer.rs  api_server.rs  applescript.rs  approval_gate.rs  architect.rs  bash_executor.rs  browser_automation.rs  chat_gate.rs  chat_sanitize.rs  cli_llm.rs  collector_pipeline.rs  command_queue.rs  config_manager.rs  consistency_check.rs  content_extractor.rs  context_pruning.rs  db.rs  dependency_check.rs  diagnostic_events.rs  error.rs  execution_controller.rs  external_apis.rs  feedback_collector.rs  intent_router.rs  judgment.rs  lib.rs  llama_local.rs  llm_gateway.rs  main.rs  mcp_client.rs  memory.rs  monitor.rs  n8n_api.rs  nl_automation.rs  (+43 more)
(+370 files in other folders)
